--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,5 +6,12 @@
   "alwaysUpdateLinks": true,
   "promptDelete": false,
   "useMarkdownLinks": true,
-  "showUnsupportedFiles": true
+  "showUnsupportedFiles": true,
+  "pdfExportSettings": {
+    "includeName": true,
+    "pageSize": "A4",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
