--- a/.obsidian/plugins/diagram-zoom-drag/manifest.json
+++ b/.obsidian/plugins/diagram-zoom-drag/manifest.json
@@ -1,9 +1,9 @@
 {
   "id": "diagram-zoom-drag",
-  "name": "Diagram Zoom Drag",
-  "version": "5.0.0",
+  "name": "Image Zoom & Drag",
+  "version": "6.1.1",
   "minAppVersion": "0.9.12",
-  "description": "Add zoom and drag functionality to diagrams from Mermaid, Plantuml, Graphviz, Gravizo and so on",
-  "author": "ChenPengyuan",
+  "description": "Make any image or diagram interactive with zoom, drag, and control panels",
+  "author": "ChenPengyuan(gitcpy) & Ssentiago",
   "isDesktopOnly": false
 }
